[tool.poetry]
name = "flask-swagger-test"
version = "0.1.0"
description = ""
authors = ["Lex Chen"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.1"
flasgger = "^0.9.5"
Flask-RESTful = "^0.3.9"
gevent = "^21.1.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
